# TokenSnap

./: .gitignore  ADVANCED.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: tests.yml
tests/: conftest.py  test_cleaner.py  test_cli_cortex.py  test_cli_preset.py  test_cli_run.py  test_cli_status.py  test_cli_stop_cleanup.py  test_compressor.py  test_config.py  test_context_engine.py  test_context_store.py  test_fetch_context.py  test_find_executable.py  test_history.py  test_mcp_server.py  test_ollama.py  test_openrouter.py  test_project.py  test_project_dna.py  test_project_primer.py  test_proxy_optimize.py  test_session_bridge.py  test_stats.py  test_token_counter.py  test_usage.py  test_webui.py
tokensnap/: __init__.py  __main__.py  cleaner.py  cli.py  compressor.py  config.py  context_engine.py  context_store.py  fetch_context.py  history.py  mcp_server.py  ollama.py  openrouter.py  project.py  project_dna.py  project_primer.py  proxy.py  session_bridge.py  stats.py  token_counter.py  usage.py  utils.py  webui.py
