[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensnap"
version = "0.1.0"
description = "Intelligent HTTP proxy that cuts Claude Code token usage by 40-70% via context cleaning and history compression."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Tokensnap contributors" }]
keywords = ["claude", "claude-code", "anthropic", "proxy", "tokens", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "aiohttp>=3.9",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/ahmadkassem511/TokenSnap"
Repository = "https://github.com/ahmadkassem511/TokenSnap"
Issues = "https://github.com/ahmadkassem511/TokenSnap/issues"

[project.scripts]
tokensnap = "tokensnap.cli:app"

[tool.setuptools]
packages = ["tokensnap"]
